# src/routes/tag.routes.js
@@ -1,69 +1,38 @@
 const express = require("express");
 const router = express.Router();
 const { Tag, Post } = require("../db/models");
-const {
-  createTag,
-  getAllTags,
-  getTagById,
-  updateTag,
-  assignTagToPost,
-  deleteTag,
-} = require("../controllers/tag.controller");
+const { createTag, getAllTags, getTagById, updateTag, deleteTag } = require("../controllers/tag.controller");
 const schemaValidatorMiddleware = require("../middlewares/validations/schema.middleware");
 const querySchemaValidatorMiddleware =
-  require("../middlewares/validations/schema.middleware").querySchemaValidatorMiddleware;
+    require("../middlewares/validations/schema.middleware").querySchemaValidatorMiddleware;
 const existValidateMiddleware = require("../middlewares/validations/exist.middleware");
 const numericParamValidateMiddleware = require("../middlewares/validations/numeric.middleware");
-const {
-  tagSchema,
-  updateTagSchema,
-  getAllTagsQuerySchema,
-  assignTagSchema,
-} = require("../schemas/tag.schema");
+const { tagSchema, updateTagSchema, getAllTagsQuerySchema } = require("../schemas/tag.schema");
 
 router.get(
-  "/",
-  querySchemaValidatorMiddleware(getAllTagsQuerySchema),
-  existValidateMiddleware(Post, "post_id", { optional: true }),
-  getAllTags,
+    "/",
+    querySchemaValidatorMiddleware(getAllTagsQuerySchema),
+    existValidateMiddleware(Post, "post_id", { optional: true }),
+    getAllTags
 );
 
 router.post(
-  "/",
-  schemaValidatorMiddleware(tagSchema),
-  existValidateMiddleware(Post, "post_id", { optional: true }),
-  createTag,
+    "/",
+    schemaValidatorMiddleware(tagSchema),
+    existValidateMiddleware(Post, "post_id", { optional: true }),
+    createTag
 );
 
-router.get(
-  "/:id",
-  numericParamValidateMiddleware("id"),
-  existValidateMiddleware(Tag, "id"),
-  getTagById,
-);
+router.get("/:id", numericParamValidateMiddleware("id"), existValidateMiddleware(Tag, "id"), getTagById);
 
 router.patch(
-  "/:id",
-  numericParamValidateMiddleware("id"),
-  existValidateMiddleware(Tag, "id"),
-  schemaValidatorMiddleware(updateTagSchema),
-  updateTag,
+    "/:id",
+    numericParamValidateMiddleware("id"),
+    existValidateMiddleware(Tag, "id"),
+    schemaValidatorMiddleware(updateTagSchema),
+    updateTag
 );
 
-router.post(
-  "/:id",
-  numericParamValidateMiddleware("id"),
-  existValidateMiddleware(Tag, "id"),
-  schemaValidatorMiddleware(assignTagSchema),
-  existValidateMiddleware(Post, "post_id"),
-  assignTagToPost,
-);
-
-router.delete(
-  "/:id",
-  numericParamValidateMiddleware("id"),
-  existValidateMiddleware(Tag, "id"),
-  deleteTag,
-);
+router.delete("/:id", numericParamValidateMiddleware("id"), existValidateMiddleware(Tag, "id"), deleteTag);
 
 module.exports = router;
